--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,7 @@
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio dónde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+            <p>Estoy en la clase fusión de ramas con git merge!</p>
         </div>
     </div>
 </body>
