--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,8 @@
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio dónde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
-            <p>Estoy en la clase fusión de ramas con git merge!</p>
+            <p>Este es un comentario de la clase fusión de ramas con git merge</p>
+            <p>Adiconal parrafo en cabecera</p>
         </div>
     </div>
 </body>
